--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://sowad:sowad@cluster0.m7vh241.mongodb.net/amr-charging-hub?retryWrites=true&w=majority&appName=Cluster0
-PORT=5000
+MONGODB_URI=mongodb://localhost:27017/amr-charging-hub
+JWT_SECRET=your-secret-key
