--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "copy-of-copy-of-amr-charging-hub": "file:..",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
