--- a/package.json
+++ b/package.json
@@ -11,25 +11,13 @@
 
   "dependencies": {
 
-    "bcryptjs": "^3.0.2",
-
-    "cors": "^2.8.5",
-
-    "dotenv": "^16.3.1",
-
-    "express": "^4.18.2",
-
-    "jsonwebtoken": "^9.0.2",
-
-    "mongoose": "^8.0.0",
+    "axios": "^1.6.0",
 
     "react": "^19.2.0",
 
     "react-dom": "^19.2.0",
 
-    "react-router-dom": "^7.9.3",
-
-    "uuid": "^13.0.0"
+    "react-router-dom": "^7.9.3"
 
   },
 
